--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 <body>
 
 <header>
-  <h1>Google Doodle Games</h1>
+  <h1>Google Drive</h1>
 </header>
 
 <main id="game-list">
-  <p>Click a game to play Google Doodle games!</p>
+  <p>Click one to !</p>
 </main>
 
 <script>
